# kafka-spark-streaming

./: Makefile  main.py  pyproject.toml
src/: kafka_producer.py  python_consumer.py  python_consumer_retries.py  spark_consumer.py  utils.py
